
* Release history

** Main branch change

- Feat: add resume functionality for CLI sessions across backends, by ileixe 
- Feat: add support for OpenAI Codex CLI backend
- Chore: C-u on ai-code-implement-todo will keep the requirement
- Feat: support run shell command / AI prompt shell command in dired buffer
- Feat: add ai-code-init-project to init .projectile and create tags
- Feat: add mcp inspector automatically runner
- Chore: Enhance ai-code-shell-cmd to
  - handle region and improve input
  - be able to insert ai generated command to shell buffer
- Feat: Add MCP debug command and customizable run options for Python files
- Chore: Enhance AI shell command input to support file name expansion in dired mode