@@ -14,3 +14,4 @@
   - be able to insert ai generated command to shell buffer
 - Feat: Add MCP debug command and customizable run options for Python files
 - Chore: Enhance AI shell command input to support file name expansion in dired mode
+- Chore (inspector): migrate to eshell for improved command handling
